--- a/voting_app/postgres-app-deploy.yml
+++ b/voting_app/postgres-app-deploy.yml
@@ -14,7 +14,7 @@ spec:
         template:
                 metadata:
                         name: postgres-voting-pod
-                        label:
+                        labels:
                                 name: postgres-app-pod
                                 app: demo-voting-app
                 spec:
