--- a/voting_app/worker-app-deploy.yml
+++ b/voting_app/worker-app-deploy.yml
@@ -8,7 +8,7 @@ metadata:
 spec:
         replicas: 2
         selector:
-                matchLabel:
+                matchLabels:
                         name: worker-app-pod
                         app: demo-voting-app
         template:
@@ -18,7 +18,7 @@ spec:
                                 name: worker-app-pod
                                 app: demo-voting-app
                 spec:
-                        container:
+                        containers:
                                 - name: worker
                                   image: dockersamples/examplevotingapp_worker
 
