added service files for redis and postgres

--- a/voting_app/postgres-app-deploy.yml
+++ b/voting_app/postgres-app-deploy.yml
@@ -13,7 +13,7 @@ spec:
                         app: demo-voting-app
         template:
                 metadata:
-                        name: postgres-voting-pod
+                        name: postgres-app-pod
                         labels:
                                 name: postgres-app-pod
                                 app: demo-voting-app
