--- a/voting_app/postgres-service.yml
+++ b/voting_app/postgres-service.yml
@@ -1,13 +1,14 @@
----
 apiVersion: v1
 kind: Service
 metadata:
-        name: result-service
-spec:
-        type: LoadBalancer
-        ports:
-                - targetPort: 80
-                  port: 80
-        selector:
-                name: result-app-pod
+        name: db
+        labels:
+                name: db-service
                 app: demo-voting-app
+        spec:
+                ports:
+                        - port: 5432
+                          targetPort: 5432
+                          selector:
+                                  name: postgres-pod
+                                  app: demo-voting-app
