--- a/voting_app/redis-service.yml
+++ b/voting_app/redis-service.yml
@@ -1,14 +1,14 @@
----
 apiVersion: v1
 kind: Service
 metadata:
-        name: redis-service
-spec:
-        type: LoadBalancer
-        ports:
-                - targetPort: 80 
-                  port: 80
-        selector:
-                name: voting-app-pod
-                app: demo-voting-app
-
+         name: redis
+         labels:
+                    name: redis-service
+                    app: demo-voting-app
+         spec:
+                 ports:
+                         - port: 6379
+                           targetPort: 6379
+                 selector:
+                           name: redis-app-pod
+                           app: demo-voting-app
